[package]
name = "gmime"
description = "Bindings for gmime-3.0"
homepage = "https://github.com/vhdirk/gmime-rs"
authors = ["Dirk Van Haerenborgh <vhdirk@gmail.com>"]
keywords = ["gmime", "gtk-rs", "gnome"]
categories = ["email", "parsing", "encoding", "cryptography"]
license = "MIT"
version = "0.1.0"
readme = "README.md"
documentation = "https://vhdirk.github.io/gmime-rs/gmime/"
exclude = [
    "gir-files/*",
]
build = "build.rs"

[badges]
travis-ci = { repository = "vhdirk/gmime-rs" }

[lib]
name = "gmime"

[features]
embed-lgpl-docs = ["gtk-rs-lgpl-docs"]
purge-lgpl-docs = ["gtk-rs-lgpl-docs"]

# v1_31 = ["gmime-sys/v1_31"]
# v1_32 = ["v1_31", "gmime-sys/v1_32"]
# v1_32_4 = ["v1_32", "gmime-sys/v1_32_4"]
# v1_34 = ["v1_32_4", "gmime-sys/v1_34"]
# v1_36_7 = ["v1_34", "gmime-sys/v1_36_7"]
# v1_38 = ["v1_36_7", "gmime-sys/v1_38"]
# v1_42 = ["v1_38", "gmime-sys/v1_42"]

[dependencies]
libc = "0.2"
bitflags = "1.0"

[dependencies.glib-sys]
git = "https://github.com/gtk-rs/sys"
# version = "0.9.0"

[dependencies.gobject-sys]
git = "https://github.com/gtk-rs/sys"
# version = "0.9.0"

[dependencies.gio-sys]
git = "https://github.com/gtk-rs/sys"
# version = "0.9.0"

[dependencies.glib]
git = "https://github.com/gtk-rs/glib"
# version = "0.8.0"

[dependencies.gio]
git = "https://github.com/gtk-rs/gio"
# version = "0.7.0"

[dependencies.gmime-sys]
path = "./gmime-sys"
version = "0.7.0"

[dev-dependencies]
rustdoc-stripper = "^0.1.5"

[build-dependencies.gtk-rs-lgpl-docs]
version = "^0.1.3"
optional = true
path = "lgpl-docs"
