[build-dependencies]
pkg-config = "0.3.7"

[dependencies]
bitflags = "1.0"
libc = "0.2"

[dependencies.gio-sys]
# version = "0.9.0"
git = "https://github.com/gtk-rs/sys"

[dependencies.glib-sys]
# version = "0.9.0"
git = "https://github.com/gtk-rs/sys"

[dependencies.gobject-sys]
# version = "0.9.0"
git = "https://github.com/gtk-rs/sys"

[dev-dependencies]
shell-words = "0.1.0"
tempdir = "0.3"

[features]
v3_2 = []
dox = []

[lib]
name = "gmime_sys"

[package]
authors = ["Dirk Van Haerenborgh <vhdirk@gmail.com>"]
build = "build.rs"
description = "FFI bindings to gmime-3.0, generated with gtk-rs' gir tool"
documentation = "https://vhdirk.github.io/gmime-rs/gmime_sys/"
homepage = "https://github.com/vhdirk/gmime-rs"
keywords = ["gmime", "glib", "ffi", "gtk-rs", "gnome"]
license = "MIT"
links = "gmime"
name = "gmime-sys"
readme = "README.md"
version = "0.0.7"

["package.metadata.docs.rs"]
features = ["dox", "v3_2"]
