[package]
authors = ["Dirk Van Haerenborgh <vhdirk@gmail.com>"]
name = "gmime-sys"
description = "FFI bindings to gmime-3.0, generated with gtk-rs' gir tool"
documentation = "https://vhdirk.github.io/gmime-rs/gmime_sys/"
homepage = "https://github.com/vhdirk/gmime-rs"
keywords = ["gmime", "glib", "ffi", "gtk-rs", "gnome"]
links = "gmime"
edition = "2018"
build = "build.rs"
readme = "README.md"
version = "0.8.0"

[package.metadata.system-deps.gmime_3_0]
name = "gmime-3.0"
version = "2.26"

[package.metadata.system-deps.gmime_3_0.v3_2]
version = "3.2"

[package.metadata.docs.rs]
features = ["dox"]

[lib]
name = "gmime_sys"

[dependencies]
libc = "0.2"

[dependencies.gio-sys]
git = "https://github.com/gtk-rs/gtk-rs-core"

[dependencies.glib-sys]
git = "https://github.com/gtk-rs/gtk-rs-core"

[dependencies.gobject-sys]
git = "https://github.com/gtk-rs/gtk-rs-core"

[build-dependencies]
pkg-config = "0.3.7"
system-deps = "5"

[dev-dependencies]
shell-words = "1.0.0"
tempfile = "3"

[features]
v3_2 = []
dox = []
